avoid clipping arrow on hover

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -376,9 +376,10 @@
   }
 }
 
-.center-icon {
+.arrow-icon {
   display: inline-flex;
   align-items: center;
+  padding-right: .8rem;
 }
 
 /*
